--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,11 @@
     box-sizing: border-box;
 }
 
+
 body {
-    background-color: #5EE4A1;
+    background: #12c2e9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
@@ -24,7 +27,9 @@ body {
 }
 
 .chrono h1 {
+    font-family: 'Montserrat', sans-serif;
     font-size: 300px; 
+    font-weight: 500;
     align-items: center;
     left: 50%;
     margin: 0 auto;
@@ -34,26 +39,30 @@ body {
     flex-wrap: wrap;
     margin: 0 auto;
     margin-top: 60px;
+    
 }
 
 .options > div {
-    background-color: #FFF46B ;
+    /* background-color: #FFF46B ; */
     border-radius: 8px;
-    box-shadow: 0px 4px 5px 4px rgba(0,0,0,0.43);
+    
     flex: 1 1 280px;
     margin: 0 40px;
+    margin-bottom: 20px;
     transition: 400ms;
     cursor: pointer;
 }
 
 .options > div:hover {
-    background-color: #FF8B3B;
+    background-color: rgba(255, 77, 77, 0.288);
+    box-shadow: 0px 4px 5px 4px rgba(0,0,0,0.43);
 }
 
 .options h1 {
-    font-family: "Ubuntu", sans-serif;
-    font-size: 30px;
-    color: #000000;
+    font-family: 'Montserrat', serif;
+    font-size: 50px;
+    font-weight: 200;
+    color: #FFFFFF;
     text-align: center;
     padding: 20px;
 }
